my landing page

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <h2>How to travel virtually</h2>
         <div class="cards">
           <div class="card-compute">
-            <img src="../../images/computer.jpg" alt="computer">
+            <img src="../../images/computer.svg" alt="computer">
             <h3>Search</h3>
             <p>Take your computer and click on the green button!</p>
           </div>
           <div class="card-luggage">
-            <img src="../../images/luggage.jpg" alt="luggage">
+            <img src="../../images/luggage.svg" alt="luggage">
             <h3>Luggage</h3>
             <p>No need to lugagge anything, you'll travel without!</p>
           </div>
           <div class="card-travel">
-            <img src="../../images/travel.jpg" alt="travel-at-home">
+            <img src="../../images/travel.svg" alt="travel-at-home">
             <h3>Travel</h3>
             <p>Tadam, as a magical trick you can discover jungle landscapes from your couch!</p>
           </div>
