--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- code a Hero / Banner section -->
-    <div class="content">
+    <div class="container">
       <div class="banner">
         <div class="container">
           <h1>Explore the jungle as you never seen it.</h1>
@@ -23,37 +23,37 @@
         <h2>How to travel virtually</h2>
         <div class="cards">
           <div class="card-compute">
-            <img src="../images/computer.jpg" alt="computer">
+            <img src="/images/computer.svg" alt="computer">
             <h3>Search</h3>
             <p>Take your computer and click on the green button!</p>
           </div>
           <div class="card-luggage">
-            <img src="../images/luggage.jpg" alt="luggage">
+            <img src="/images/luggage.svg" alt="luggage">
             <h3>Luggage</h3>
             <p>No need to lugagge anything, you'll travel without!</p>
           </div>
           <div class="card-travel">
-            <img src="../images/travel.jpg" alt="travel-at-home">
+            <img src="/images/travel.svg" alt="travel">
             <h3>Travel</h3>
             <p>Tadam, as a magical trick you can discover jungle landscapes from your couch!</p>
           </div>
         </div>
         <!-- code a footer -->
-        <div class="card-footer">
-          <div class="card-footer-cards">
-            <a class="btn-green" href="https://www.facebook.com/profile.php?id=100074330181833" target="_blank">
-              <i class="fa-brands fa-square-facebook"></i>
-            </a>
-            <a class="btn-green" href="https://www.instagram.com/oran.outan.9/" target="_blank">
-              <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a class="btn-green" href="https://twitter.com/Moustique_Tigre" target="_blank">
-              <i class="fa-brands fa-twitter"></i>
-            </a>
-          </div>
-          <div class="card-footer-p">
-            <p>This website was created by Lisa.</p>
-          </div>
+      </div>
+      <div class="card-footer">
+        <div class="card-footer-cards">
+          <a class="btn-green" href="https://www.facebook.com/profile.php?id=100074330181833" target="_blank">
+            <i class="fa-brands fa-square-facebook"></i>
+          </a>
+          <a class="btn-green" href="https://www.instagram.com/oran.outan.9/" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a class="btn-green" href="https://twitter.com/Moustique_Tigre" target="_blank">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+        </div>
+        <div class="card-footer-p">
+          <p>This website was created by Lisa.</p>
         </div>
       </div>
   </div>
